# react-native-iroh

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  CONTRIBUTING.md  Cargo.toml  Iroh.podspec  LICENSE  README.md  THIRD-PARTY-NOTICES.md  deny.toml  lefthook.yml  nitro.json  package.json  release.config.cjs  tsconfig.build.json  tsconfig.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: android-build.yml  checks.yml  e2e-android.yml  ios-build.yml  release.yml  rust.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/iroh/: IrohPackage.kt
cpp/: HybridIroh.cpp  HybridIroh.hpp
docs/examples/: README.md  cancel-and-errors.ts  download-progress.tsx  hello-endpoint.ts  lifecycle.ts  share-file.ts
e2e/: bench-server.mjs  run-bench.sh  run-e2e.sh
e2e/flows/: collection.yaml  download.yaml  share.yaml  smoke.yaml
example/: App.tsx  Gemfile  README.md  app.json  babel.config.js  metro.config.js  package.json  react-native.config.js  tsconfig.json
example/android/: gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/irohexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/IrohExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/IrohExample.xcodeproj/: project.pbxproj
example/ios/IrohExample.xcodeproj/xcshareddata/xcschemes/: IrohExample.xcscheme
example/src/: BenchSection.tsx  CollectionsSection.tsx  DownloadSection.tsx  ProgressBar.tsx  ShareSection.tsx  SmokeSection.tsx  bench.ts  markers.ts  paths.ts  theme.ts  ticketHash.ts
ios/: Bridge.h
rust/iroh-rn-core/: Cargo.toml
rust/iroh-rn-core/src/: blobs.rs  coalesce.rs  endpoint.rs  error.rs  ffi.rs  hybrid_iroh.rs  lib.rs  registry.rs  runtime.rs  test_support.rs
rust/iroh-rn-core/tests/: transfer.rs
scripts/: build-rust-android.sh  build-rust-ios.sh
src/: endpoint.ts  errors.ts  index.ts  native.ts  ticket.ts  transfer.ts  version.ts  watchable.ts
src/__tests__/: api.test-d.ts  endpoint.test.ts  env.d.ts  errors.test.ts  helpers.ts  import.test.ts  quickstart.test-d.ts  ticket.test.ts  transfer.test.ts  version.test.ts  watchable.test.ts
src/specs/: iroh.nitro.ts
test/: preload.ts
