# The staticlib must be named `libIroh_rust.a`: that exact file name is what
# the nitrogen-generated `Iroh+autolinking.cmake` links against.
[package]
name = "iroh-rn-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
# MSRV inherited from iroh 1.0.2 / iroh-blobs 0.103.0 (both require 1.91).
rust-version = "1.91"
publish = false

[lib]
name = "Iroh_rust"
crate-type = ["staticlib", "rlib"]

[dependencies]
iroh_rust = { path = "../../nitrogen/generated/shared/rust" }
iroh = "=1.0.2"
iroh-blobs = { version = "=0.103.0", default-features = false, features = ["fs-store"] }
n0-future = "=0.3.2"
tokio = { version = "=1.53.0", features = ["rt-multi-thread", "sync", "time", "fs", "macros"] }
thiserror = "=2.0.18"
tracing = "=0.1.44"

[dev-dependencies]
blake3 = "1"
tempfile = "3"
